# ImageVisionAPI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  env_example.txt  pyproject.toml  tox.ini
.github/workflows/: cd.yml  ci.yml
src/ImageVisionAI/app/: main.py  schemas.py
src/ImageVisionAI/models/: cnn_model.ipynb  cnn_model.py
src/app/: database.py  env_example.txt  main.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  auth.py  info.py  ml.py  users.py
src/app/core/: config.py  schemas.py  security.py  setup.py
src/app/core/ml/: cnn_model.ipynb  cnn_model.py
src/app/db/: database.py
src/app/ml/: cnn_model.py
src/app/models/: __init__.py  image.py  mortgage.py  property.py  user.py
src/app/routers/: auth.py  info.py  ml.py
src/app/schemas/: schemas.py
src/image_vision_ai/app/: log.ini  main.py  schemas.py
src/image_vision_ai/models/: cnn_model.py
src/image_vision_ai/notebook/: cnn_model.ipynb
tests/: conftest.py  test_api.py
tests/data/: test_db.db
tests/integration/: test_auth.py  test_cnn.py  test_database.py  test_info.py  test_ml.py
tests/unit/: test_api.py  test_auth.py  test_cnn.py
